estilo.css added

--- a/AspNetOwin/Views/Shared/_Layout.cshtml
+++ b/AspNetOwin/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
 
     <!-- Normalize Core -->
     <link rel="stylesheet" href="~/Content/normalize.css" />
+    <link rel="stylesheet" href="~/Content/estilo.css" />
 
 </head>
 <body>
